Room info fixes
The actual data we were returning for rooms didn't quite match what is
in api.yaml, and was missing the room defaults info.

Changes:

- Don't include `'moderator': True` unless we are a moderator
- Don't include `'admin': True` unless we are an admin
- Don't include room description when it is null
- Add default_read/default_write/default_upload fields to room info if
  we have mod permissions so that a moderator client can see the current
  value.
- Fix tests for the above.
